--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   icons_plus: ^5.0.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
