--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   icons_plus: ^5.0.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.8.0
+  intl: ^0.20.2
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
