--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   intl: ^0.20.2
   lottie: ^3.3.1
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
