--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   icons_plus: ^5.0.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.8
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.8.0
   intl: ^0.20.2
