--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.20.2
   lottie: ^3.3.1
   google_sign_in: ^6.3.0
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
