--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   lottie: ^3.3.1
   google_sign_in: ^6.3.0
   salomon_bottom_bar: ^3.3.2
+  flutter_widget_catalogue: ^3.0.0
 
 dev_dependencies:
   flutter_test:
