--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in: ^6.3.0
   salomon_bottom_bar: ^3.3.2
   flutter_widget_catalogue: ^3.0.0
+  page_transition: ^2.2.1
 
 dev_dependencies:
   flutter_test:
