feat(home_screen): Add responsive and animated Food List card with hover interaction

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
   assets:
     - assets/dietlylogo.png
     - assets/animations/splash_screen.json
+    - assets/foodlist.png
 
   #   - images/a_dot_ham.jpeg
 
