feat(home_screen):Add animated RecipeListCard with hover effect and integrate into HomeScreen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/dietlylogo.png
     - assets/animations/splash_screen.json
     - assets/foodlist.png
+    - assets/recipe.png
 
   #   - images/a_dot_ham.jpeg
 
