feat(home_screen): Add ProgressCard widget with layout integration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/animations/splash_screen.json
     - assets/foodlist.png
     - assets/recipe.png
+    - assets/goal.png
 
   #   - images/a_dot_ham.jpeg
 
